[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template"
version = "0.1.0"
description = "Template for research project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "nvidia-ml-py>=13.580.82",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "torch==2.9.1",
    "torchvision>=0.20.1",
    "transformers>=4.57.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipelines"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
