[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template"
version = "0.1.0"
description = "Template for research project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "nvidia-ml-py>=13.580.82",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipelines"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
